<resources>


    <string name="app_name">Accident report</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="section1">Details</string>
    <string name="section2">Location</string>
    <string name="section3">Pictures</string>
    <string name="section4">Damage</string>


    <string name="menu1">Date and time</string>
    <string name="menu2">Third party</string>
    <string name="menu3">Vehicle</string>
    <string name="menu4">Insurance</string>
    <string name="menu5">Police</string>
    <string name="menu6">Description</string>
    <string name="menu7">Casualities</string>
    <string name="menu8">Witnesses</string>
    <string name="menu9">Exit</string>


    <string name="take_picture">to take a picture of the accident</string>
    <string name="load_map">to load a map of your location</string>
    <string name="click_here">CLICK HERE</string>
    <string name="load_location">LOAD YOUR LOCATION</string>
    <string name="draw_damage">DRAW VEHICULE DAMAGE</string>


    <!-- dialog third party -->
    <string name="dialog_third_party_title">Third party</string>
    <string name="dialog_third_party_name">Driver name</string>
    <string name="dialog_third_party_adress">Adress</string>
    <string name="dialog_third_party_phone">Phone number</string>
    <string name="dialog_third_party_licence">Licence number</string>
    <string name="dialog_third_party_text">The driver is not the vehicle owner</string>


    <!-- dialog third party -->
    <string name="dialog_vehicle_title">Vehicle</string>
    <string name="dialog_vehicle_type">Vehicle type</string>
    <string name="dialog_vehicle_manufacturer">Manufacturer</string>
    <string name="dialog_vehicle_model">Model</string>
    <string name="dialog_vehicle_color">Color</string>
    <string name="dialog_vehicle_year">Year</string>
    <string name="dialog_vehicle_licence_plate">Licence plate</string>

    <!-- dialog insurance -->
    <string name="dialog_insurance_title">Insurance</string>
    <string name="dialog_insurance_agency_name">Agency name</string>
    <string name="dialog_insurance_policy_number">Policy number</string>
    <string name="dialog_insurance_agent_name">Agent name</string>
    <string name="dialog_insurance_agent_number">Agent number</string>

    <!-- dialog police -->
    <string name="dialog_police_title">Police</string>
    <string name="dialog_police_event_number">Event number</string>
    <string name="dialog_police_case_number">Case number</string>
    <string name="dialog_police_unit_number">Unit number</string>
    <string name="dialog_police_station_number">Station number</string>

    <!-- dialog description -->
    <string name="dialog_description_title">Description</string>
    <string name="dialog_description_text">Describe the accident</string>

    <!-- dialog casualty -->
    <string name="dialog_casualty_title">Casualty</string>
    <string name="dialog_casualty_name">Full name</string>
    <string name="dialog_casualty_address">Address</string>
    <string name="dialog_casualty_phone">Phone number</string>
    <string name="dialog_casualty_age">Age</string>
    <string name="dialog_casualty_checkbox">Was he/she taken to hospital?</string>

    <!-- dialog witness -->
    <string name="dialog_witness_title">Witness</string>
    <string name="dialog_witness_name">Full name</string>
    <string name="dialog_witness_address">Address</string>
    <string name="dialog_witness_phone">Phone number</string>
    <string name="dialog_witness_age">Age</string>

    <!-- dialog file name -->
    <string name="dialog_file_name_title">Name for file</string>
    <string name="dialog_file_name_text">File name</string>

    <!-- dialog date -->
    <string name="dialog_date_date">Select date and time</string>
    <string name="dialog_date_title">Date and Time</string>

    <!-- Damage activity -->
    <string name="damage_activity_text">Select type</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="saving">Saving...</string>
    <string name="saved">Saved !</string>

    <!-- MapsActivityCurrentPlace activity -->
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="serching">searching...</string>


    <string name="banner_ad_unit_id">ca-app-pub-7447963107930464/8015625635</string>



    <string name="subscribe_to_news">expert locations</string>
    <string name="log_token">Signed out</string>
    <string name="loading">Loading…</string>
    <string name="signed_out">Signed Out</string>
    <string name="signed_in_fmt">Status</string>

    <string name="msg_subscribed">Subscribed to news topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="title_activity_maps">Map</string>

    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

</resources>
