<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_casualty_title"
        android:background="@color/myblue"
        android:textColor="#ffffff"
        android:padding="10dp"
        android:gravity="center" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimaryDark">
            <EditText
                android:id="@+id/dialog_casualty_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_casualty_name"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="?attr/actionModeSplitBackground"
                android:textColorHint="@color/colorPrimaryDark" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimaryDark">
            <EditText
                android:id="@+id/dialog_casualty_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_casualty_address"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="?attr/actionModeSplitBackground"
                android:textColorHint="@color/colorPrimaryDark" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimaryDark">
            <EditText
                android:id="@+id/dialog_casualty_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_casualty_phone"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="?attr/actionModeSplitBackground"
                android:textColorHint="@color/colorPrimaryDark" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimaryDark">
            <EditText
                android:id="@+id/dialog_casualty_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_casualty_age"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="?attr/actionModeSplitBackground"
                android:textColorHint="@color/colorPrimaryDark" />
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/dialog_casualty_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_casualty_checkbox" />


    </LinearLayout>
</LinearLayout>
