<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_vehicle_title"
            android:background="@color/myblue"
            android:textColor="#ffffff"
            android:padding="10dp"
            android:gravity="center" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimaryDark">
                <EditText
                    android:id="@+id/dialog_vehicle_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dialog_vehicle_type"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="?attr/actionModeSplitBackground"
                    android:textColorHint="@color/colorPrimaryDark" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimaryDark">
                <EditText
                    android:id="@+id/dialog_vehicle_manufacturer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dialog_vehicle_manufacturer"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="?attr/actionModeSplitBackground"
                    android:textColorHint="@color/colorPrimaryDark" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimaryDark">
                <EditText
                    android:id="@+id/dialog_vehicle_model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dialog_vehicle_model"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="?attr/actionModeSplitBackground"
                    android:textColorHint="@color/colorPrimaryDark" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimaryDark">
                <EditText
                    android:id="@+id/dialog_vehicle_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dialog_vehicle_color"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="?attr/actionModeSplitBackground"
                    android:textColorHint="@color/colorPrimaryDark" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimaryDark">
                <EditText
                    android:id="@+id/dialog_vehicle_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dialog_vehicle_year"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="?attr/actionModeSplitBackground"
                    android:textColorHint="@color/colorPrimaryDark" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimaryDark">
                <EditText
                    android:id="@+id/dialog_vehicle_licence_plate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dialog_vehicle_licence_plate"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="?attr/actionModeSplitBackground"
                    android:textColorHint="@color/colorPrimaryDark" />
            </android.support.design.widget.TextInputLayout>




        </LinearLayout>
    </LinearLayout>

</ScrollView>

